Final Edits.Fixed Grid, spacing, etc.

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,4 @@
 .cover__title{
-  /*width: 656px;
-  min-height: 76px;*/
   margin: 0 0 32px 0;
   font-weight: 900;
   font-size: 72px;
