--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,8 +6,6 @@
   display: flex;
   margin-right: 10px;
   text-decoration: none;
-  /*width: 42px;
-  min-height: 18px; */
 }
 
 .footer__link:hover{
