--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -25,31 +25,3 @@
   }
 }
 
-/*
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .footer {
-    width: 928px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .footer {
-    width: 720px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .footer {
-    width: 320px;
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 767px){
-  .footer {
-    margin: 64px auto 24px;
-    padding: 0 16px;
-    flex-direction: column;
-}
-} */
