--- a/blocks/grid/__items/grid__items.css
+++ b/blocks/grid/__items/grid__items.css
@@ -12,17 +12,9 @@
 
 @media screen and (max-width: 454px){
   .grid__items{
-      /*max-width: 288px;
-      height: 2724px;
-      grid-template-columns:1fr;
-      gap: 12px;
-      margin: auto;
-      margin-bottom: 64px; */
       padding: 0 16px;
       gap: 12px;
-      max-height: 2724px;
       min-width: 288px;
-
   }
 
 }
@@ -30,11 +22,11 @@
 @media screen and (min-width: 321px) and (max-width: 768px){
   .grid__items {
       max-width: 720px;
-      max-height: 1664px;
       margin: auto;
-      margin-bottom: 88px;
+      padding-bottom: 88px;
       gap: 16px;
       padding: 0 24px ;
+      grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -42,7 +34,6 @@
   .grid__items {
       max-width: 928px;
       gap: 14px;
-      max-height: 942px;
       margin: auto;
       margin-bottom: 92px;
 
