--- a/blocks/state/__container/state__container.css
+++ b/blocks/state/__container/state__container.css
@@ -3,7 +3,7 @@
   align-self: flex-end;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 767px){
   .state__container{
     display: none;
   }
